compiler-core/src/parse/snapshots/rakun_core__parse__tests__reserved_else.snap
---
source: compiler-core/src/parse/tests.rs
assertion_line: 728
expression: const else = 1
---
----- SOURCE CODE
const else = 1

----- ERROR
error: Syntax error
  ┌─ /src/parse/error.rakun:1:7
  │
1 │ const else = 1
  │       ^^^^ This is a reserved word

Hint: I was expecting to see a name here.
